PyMaker/datas/object2/RawHTML/i17501/Python_DOC_referPages.adding-two-strings-together-in-python.txt
<div class="post-text" itemprop="text">
<p>I'm trying to place two strings together but when I run this code I keep getting an error.
I'm sure this is something basic but I ahave been playing with this for 30 minutes and can't figure out what's wrong</p>
<pre><code>filename= 'data.txt'
1output = '1min' + filename
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>Like most languages, Python does not allow you to create a name that starts with a number.  This means that you need to rename <code>1output</code> because its name is illegal:</p>
<pre><code>output1 = '1min' + filename
</code></pre>
<p>Below is a demonstration:</p>
<pre><code>&gt;&gt;&gt; filename = 'data.txt'
&gt;&gt;&gt; 1output = '1min' + filename
  File "&lt;stdin&gt;", line 1
    1output = '1min' + filename
          ^
SyntaxError: invalid syntax
&gt;&gt;&gt;
&gt;&gt;&gt; filename = 'data.txt'
&gt;&gt;&gt; output1 = '1min' + filename
&gt;&gt;&gt; output1
'1mindata.txt'
&gt;&gt;&gt;
</code></pre>
<p>When creating names in Python, you must obey the following rules*:</p>
<ol>
<li><p>The first character must be either a letter or an underscore.</p></li>
<li><p>The rest of the characters must be letters, underscores, and/or numbers.</p></li>
<li><p>The finished name cannot be the same as one of the <a href="http://docs.python.org/3/reference/lexical_analysis.html#keywords" rel="nofollow">keywords</a> (<code>if</code>, <code>def</code>, <code>for</code>, etc.).</p></li>
</ol>
<hr/>
<p>*<strong>Note:</strong> In addition, you should refrain from creating a name that is the same as one of the <a href="http://docs.python.org/3/library/functions.html" rel="nofollow">built-in functions</a> (<code>str</code>, <code>input</code>, <code>list</code>, etc.).  While doing so <em>is</em> legal, it is considered a bad practice by many Python coders (author included).  This is because it will overshadow the built-in and thereby make it unusable in the current scope.</p>
</div>
<span class="comment-copy">You can't start a variable name with a number.</span>
